--- a/kwitter.html
+++ b/kwitter.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Kwitter</title>
+        <title>Lets Chat Web App</title>
         <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
                   <label >User Name:</label>
                   <input type="text" id="user_name" class="form-control" placeholder="User Name">
         
-                </Div>
+                </div>
                 <button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
                 <br><br>
             </div>
